[tool.poetry]
name = "fluentqa-helper"
version = "0.1.0"
description = ""
authors = ["fluentqa <fluentqa@163.com>"]
packages = [
    { include = "commands" },
    { include = "capture" },
    { include = "ui" }
]
[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"
qpydao = { git = "https://github.com/fluent-qa/fluentqa-pdao.git", branch = "main" }
mitmproxy = "^9.0.1"
#prompt-toolkit = "^3.0.38"
gradio = "^3.28.3"
psycopg2-binary = "^2.9.6"
toml = "^0.10.2"
xmltodict = "^0.13.0"
PyYAML = "^6.0"
pyhumps = "^3.8.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
axios = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
"qacli" = "commands.cli:main"
"qaui" = "ui.main:main"
