[tool.poetry]
name = "qpyhelper"
version = "0.1.0"
description = "ui helper tools"
authors = ["fluentqa <fluentqa@163.com>"]
packages = [
    { include = "commands" },
    { include = "capture" },
    { include = "ui" }
]
[tool.poetry.dependencies]
python=">=3.10,<3.12"
typer = "^0.9.0"
mitmproxy = "^10.2.4"
gradio = "^3.43.1"
qpydao = {path="../fluentqa-pdao", develop=true}
qpybase = {path="../fluentqa-pybase", develop=true}
psycopg2-binary = "^2.9.9"


[tool.poetry.dev-dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
"qacli" = "commands.cli:main"
"qaui" = "ui.main:main"
